# kata-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
Rust-Programming-Cookbook/Chapter04/async-await/: Cargo.toml
Rust-Programming-Cookbook/Chapter09/reading-hardware/: Cargo.toml
RustPrimer/: README.md  SUMMARY.md  TOC.md
RustPrimer/1st-glance/: README.md
RustPrimer/action/: preface.md
RustPrimer/action/db/: readme.md
RustPrimer/action/json_data/: readme.md
RustPrimer/action/mysite/: readme.md
RustPrimer/any/: any.md
RustPrimer/appendix/: glossary.md
RustPrimer/attr-and-compiler-arg/: attribute.md  preface.md  rustc-option.md
RustPrimer/cargo-detailed-cfg/: cargo-detailed-cfg.md
RustPrimer/cargo-projects-manager/: cargo-projects-manager.md
RustPrimer/closure/: as_argument_return_value.md  implementation.md  overview.md  syntax.md
RustPrimer/coding-style/: style.md
RustPrimer/collections/: hashmap.md  overview.md  vec.md
RustPrimer/concurrency-parallel-thread/: message-passing.md  parallel.md  preface.md  share-memory.md  synchronize.md  thread.md
RustPrimer/data-structure/: binary_tree.md  graph.md  linked_list.md  preface.md  priority_queue.md  queue.md  stack.md
RustPrimer/editors/: before.md  visualstudio.md  vscode.md
RustPrimer/error-handling/: option-result.md
RustPrimer/ffi/: calling-ffi-function.md  compiling-rust-to-lib.md  preface.md
RustPrimer/flow/: comment.md  condition.md  preface.md  repetition.md
RustPrimer/function/: arguement.md  higher_order_function.md  overview.md  return_value.md  statement_expression.md
RustPrimer/generic/: generic.md
RustPrimer/heap-stack/: heap-stack.md
RustPrimer/install/: install_rust_on_linux.md  preface.md  rustup.md
RustPrimer/intoborrow/: asref.md  borrow.md  cow.md  deref.md  into.md  preface.md
RustPrimer/io/: file-io.md  io.md  output.md  preface.md
RustPrimer/iterator/: iterator.md  overview.md
RustPrimer/macro/: macro.md
RustPrimer/marker/: sendsync.md
RustPrimer/match/: match.md  overview.md  pattern.md
RustPrimer/module/: module.md  preface.md  prelude.md  pub-restricted.md
RustPrimer/operator-overloading/: operator.md
RustPrimer/ownership-system/: borrowing_reference.md  lifetime.md  ownership.md  preface.md
RustPrimer/quickstart/: comments-document.md  control-flow.md  function-method.md  io-stream.md  module-attribute.md  primitive-type.md  quickstart.md  rust-travel.md  struct-enum.md  trait.md  vector-string.md
RustPrimer/rcarc/: cell.md  mutex.md  preface.md  rcarc.md
RustPrimer/safe/: safety.md
RustPrimer/std/: fs-and-path.md  net.md  overview.md  process.md
RustPrimer/testing/: bench.md  preface.md  threearchtest.md
RustPrimer/trait/: overview.md  trait-object.md  trait.md
RustPrimer/type/: compound-types.md  operator-and-formatting.md  preface.md  string.md  types.md
RustPrimer/unsafe-rawpointer/: preface.md  raw-pointer.md  unsafe.md
actix-examples/: Cargo.toml
clap-examples/: Cargo.toml
database-setup/: oracle-xe.md  yugabytedb.md
diesel-actix/: README.md
documents/: library-project.md  package-system.md  project-structure.md  vscode-config.md
examples/: Cargo.toml
examples/actix-example/: Cargo.toml
examples/clap-example/: Cargo.toml
examples/clap-example/src/: main.rs
examples/date-time/: Cargo.toml
examples/date-time/src/: main.rs
examples/diesel-actix/: Cargo.toml
examples/digest-example/: Cargo.toml
examples/digest-example/src/: main.rs
examples/grpc-tonic/: Cargo.toml
examples/grpc-tonic/proto/: vms.proto
examples/http-client/: README.md
examples/itertools-parse-log/: Cargo.toml
examples/itertools-parse-log/src/: file.rs  log.rs  main.rs
examples/log-example/: Cargo.toml
examples/log-example/src/: main.rs
examples/markdown-renderer/: Cargo.toml
examples/process-example/: README.md
examples/regex-example/: Cargo.toml
examples/regex-example/src/: main.rs
examples/tcp-network/: Cargo.toml
examples/tcp-network/src/: tcp_server.rs
examples/udp-network/: Cargo.toml
examples/uuid-example/: Cargo.toml
examples/uuid-example/src/: main.rs
filter-map/: Cargo.toml
filter-map/src/: main.rs
lets-get-rusty/: README.md
lets-get-rusty/1. Beginner/1. Get Up And Running FAST!/constants_and_statics/: Cargo.toml
lets-get-rusty/1. Beginner/2. How Rust Achieves Memory Safety/ownership_continued/: Cargo.toml
lets-get-rusty/1. Beginner/3. Building Your Own Data Types/enums_and_matching/: Cargo.toml
lets-get-rusty/1. Beginner/3. Building Your Own Data Types/option_and_result/: Cargo.toml
rust-cookbook/src/: about.md
rust-lang/: Cargo.toml
rust-lang/src/btreemap/: main.rs
rust-lang/src/compiler-warnings/: README.md
rust-lang/src/enums/: main.rs
rust-lang/src/filter-map/: main.rs
rust-lang/src/from-into/: main.rs
rust-lang/src/hashmap/: main.rs
rust-lang/src/sets/: main.rs
samples/: Cargo.toml
samples/actix-example/: Cargo.toml  REAME.md
samples/actix-example/src/: main.rs
samples/actix-sqlx/: Cargo.toml
samples/bearer-token/: Cargo.toml
samples/clap-examples/: Cargo.toml
samples/date-time/src/: main.rs
samples/diesel-actix/: Cargo.toml
samples/grpc-tonic/: build.rs
samples/http-client/: Cargo.toml  README.md
samples/log-example/: Cargo.toml  log4rs.yml
samples/log-example/src/: main.rs
samples/password-hashing/: Cargo.toml
samples/process-example/: Cargo.toml
samples/process-example/src/: main.rs
samples/rayon-examples/: Cargo.toml
samples/regex-example/src/: main.rs
samples/rocket-example/: Cargo.toml
samples/serde-json/: Cargo.toml
samples/tcp-network/: Cargo.toml
samples/tcp-network/src/: tcp_server.rs
samples/thiserror-sample/: Cargo.toml
samples/thiserror-sample/src/: main.rs
samples/type-conversion/: Cargo.toml
samples/warp-example/: Cargo.toml
samples/web-crawler/: Cargo.toml
serde-json/: Cargo.toml
serde-json/src/: main.rs
src/enums/: main.rs
src/env-variables/: main.rs
src/filter-map/: main.rs
src/hashmap/: main.rs
src/slice-types/: main.rs
warp-examples/: Cargo.toml
xml-format/: Cargo.toml
(+148 files in other folders)
