[package]
name = "kata-rust"
edition = "2021"
publish = false
version = "0.1.0"
license = "MIT"

[[bin]]
name = "filtermap"
path = "src/filter-map/main.rs"

[[bin]]
name = "hashmap"
path = "src/hashmap/main.rs"

[[bin]]
name = "btreemap"
path = "src/btreemap/main.rs"

[[bin]]
name = "display"
path = "src/display/main.rs"

[[bin]]
name = "slice-types"
path = "src/slice-types/main.rs"