[workspace]
members = [
    "actix-example",
    "actix-sqlx",
    "async-tokio",
    "bearer-token",
    "benchmark",
    "clap-example",
    "diesel-actix",
    "grpc-tonic",
    "http-client",
    "markdown-renderer",
    "password-hashing",
    "rayon-examples",
    "serde-json",
    "testing",
    "warp-example",
    "rocket-example",
    "web-crawler",
    "xml-format",
    "tcp-network",
    "udp-network",
    "date-time",
    "regex-example",
    "process-example",
    "log-example",
    "thiserror-sample",
    "uuid-example"
]
