[package]
name = "rust-lang"
edition = "2021"
publish = false
version = "0.1.0"
license = "MIT"

authors = ["Javad Sabbagh <javad.sabbaq@gmail.com>"]


[[bin]]
name = "filtermap"
path = "src/filter-map/main.rs"

[[bin]]
name = "hashmap"
path = "src/hashmap/main.rs"

[[bin]]
name = "btreemap"
path = "src/btreemap/main.rs"

[[bin]]
name = "display"
path = "src/display/main.rs"

[[bin]]
name = "slice-types"
path = "src/slice-types/main.rs"

[[bin]]
name = "socket"
path = "src/socket/main.rs"

[[bin]]
name = "inspect"
path = "src/inspect/main.rs"

[[bin]]
name = "debug-macro"
path = "src/debug-macro/main.rs"

[[bin]]
name = "env-variables"
path = "src/env-variables/main.rs"

[[bin]]
name = "enums"
path = "src/enums/main.rs"

[[bin]]
name = "sets"
path = "src/sets/main.rs"

[[bin]]
name = "iterator"
path = "src/iterator/main.rs"

[[bin]]
name = "date-time"
path = "src/date-time/main.rs"

[[bin]]
name = "strings"
path = "src/strings/main.rs"

[[bin]]
name = "stdout"
path = "src/stdout/main.rs"

[[bin]]
name = "stdin"
path = "src/stdin/main.rs"

[[bin]]
name = "declarative-macros"
path = "src/declarative-macros/main.rs"

[[bin]]
name = "procedural-macros"
path = "src/procedural-macros/main.rs"

[[bin]]
name = "module-system"
path = "src/module-system/main.rs"

[[bin]]
name = "from-into-example"
path = "src/from-into/main.rs"