[package]
name = "serde-json"
edition = "2021"
publish = false
version = "0.1.0"
license = "MIT"

[dependencies]
# derive feature must be enabled to access Serialize and Deserialize derive macros!
serde = {version = "1.0.152", features = ["derive"]}
# serde_json is just for the example, not required in general
serde_json = "1.0.93"

[[bin]]
name = "filtermap"
path = "src/main.rs"
