[package]
name = "actix-example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"


[[bin]]
name = "json-response"
path = "src/bin/json_response.rs"

[[bin]]
name = "json-request"
path = "src/bin/json_request.rs"

[[bin]]
name = "form-url-encoded"
path = "src/bin/form_url_encoded.rs"