[package]
name = "grpc-tonic"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8.3"    # gRPC implementation in Rust
prost = "0.11.8"   # protobuffer implementation in Rust
tokio = {version="1.25.0", features=["macros", "rt-multi-thread"]}

# Note: build-dependencies need build.rs in project root
[build-dependencies]
tonic-build = "0.8.4"  # let the cargo generate proto code during compilation time